objects/ssot__Incident__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetectedDateTime__c</fullName>
        <label>Detected DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Incident Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentCategory__c</fullName>
        <label>Incident Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentImpact__c</fullName>
        <label>Incident Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentNumber__c</fullName>
        <label>Incident Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentPausedDateTime__c</fullName>
        <label>Incident Paused DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentPriority__c</fullName>
        <label>Incident Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentReportedMethod__c</fullName>
        <label>Incident Reported Method</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentStatusCategory__c</fullName>
        <label>Incident Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentStatus__c</fullName>
        <label>Incident Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentSubCateogory__c</fullName>
        <label>Incident Sub Cateogory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentType__c</fullName>
        <label>Incident Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IncidentUrgency__c</fullName>
        <label>Incident Urgency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Incident_OwnerId_map_UserGroup_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident_OwnerId_map_UserGroup_Id_N_1</label>
        <referenceTo>ssot__UserGroup__dlm</referenceTo>
        <relationshipLabel>Incident_OwnerId_map_UserGroup_Id_N_1</relationshipLabel>
        <relationshipName>Incident_OwnerId_map_UserGroup_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Incident_OwnerId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident_OwnerId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Incident_OwnerId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Incident_OwnerId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Incident_ResolvedById_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident_ResolvedById_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Incident_ResolvedById_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Incident_ResolvedById_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <label>Is Closed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMajorIncident__c</fullName>
        <label>Is Major Incident</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsStopped__c</fullName>
        <label>Is Stopped</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneStatusText__c</fullName>
        <label>Milestone Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatingHoursId__c</fullName>
        <label>Operating Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentIncidentId__c</fullName>
        <label>Parent Incident</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityOverrideReasonText__c</fullName>
        <label>Priority Override Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionDateTime__c</fullName>
        <label>Resolution DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResolutionSummaryText__c</fullName>
        <label>Resolution Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResolvedById__c</fullName>
        <label>Resolved By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009466458_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident_ParentIncidentId_map_Incide_rel</label>
        <referenceTo>ssot__Incident__dlm</referenceTo>
        <relationshipLabel>Incident_ParentIncidentId_map_Incide_rel</relationshipLabel>
        <relationshipName>rel_1702009466458_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009467872_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident_OperatingHoursId_map_Operat_rel</label>
        <referenceTo>ssot__OperatingHours__dlm</referenceTo>
        <relationshipLabel>Incident_OperatingHoursId_map_Operat_rel</relationshipLabel>
        <relationshipName>rel_1702009467872_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>